refactoring of user-item services